src/internal/vm/snapshots/hebi__internal__vm__tests__table_access_named.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := {a: 10}
v.a


# Result:
runtime error: `Table` does not support field access
