src/internal/vm/snapshots/hebi__internal__vm__tests__table_access_unknown.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := {}
v["a"]


# Result:
runtime error: `<table>` has no index `a`
