src/internal/vm/snapshots/hebi__internal__vm__tests__table_nested_access_keyed.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := {a: {b: 10}}
v["a"]["b"]


# Result:
Int(
    10,
)
