src/internal/vm/snapshots/hebi__internal__vm__tests__unary_invert.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := 20
-v


# Result:
Int(
    -20,
)
