src/internal/vm/snapshots/hebi__internal__vm__tests__unary_not.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := false
!v


# Result:
Bool(
    true,
)
