src/internal/vm/snapshots/hebi__internal__vm__tests__unary_not_int.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := 0
!v


# Result:
Bool(
    true,
)
