src/internal/vm/snapshots/hebi__internal__vm__tests__unary_not_none.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := none
!v


# Result:
Bool(
    true,
)
