src/internal/vm/snapshots/hebi__internal__vm__tests__unary_not_str.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := "test"
!v


# Result:
Bool(
    false,
)
