src/internal/vm/snapshots/hebi__internal__vm__tests__use_named_import_in_nested_scope.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
from test import value
fn foo():
  print value
foo()


# Result:
None

# Output:
100

